# Visual-AI-Chess-Engine

./: CMakeLists.txt  README.md
engine/: ai_engine.cpp  ai_engine.h  board.cpp  board.h  chess.h  evaluator.cpp  evaluator.h  game.cpp  game.h  main.cpp  movegen.cpp  movegen.h  zobrist.cpp
resources/: resources.qrc
src/: AnimationManager.cpp  AnimationManager.h  BoardWidget.cpp  BoardWidget.h  ChessController.cpp  ChessController.h  GameSettingsDialog.h  MainWindow.cpp  MainWindow.h  MoveHistoryWidget.cpp  MoveHistoryWidget.h  PersistenceManager.cpp  PersistenceManager.h  PromotionDialog.h  ReplayBoardView.cpp  ReplayBoardView.h  ReplayDialog.cpp  ReplayDialog.h  SoundManager.cpp  SoundManager.h  StatsDialog.cpp  StatsDialog.h  StatsManager.cpp  StatsManager.h  ThemeManager.cpp  ThemeManager.h  main.cpp
